--- a/Diffuz.old/package.json
+++ b/Diffuz.old/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Test",
+  "name": "Diffuz",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
